<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="80dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/warninglight_flash_freq"
        android:textColor="#FFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/seekbar_warning_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="2000"
            android:progress="400" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slow"
            android:textColor="#FFF"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/policelight_flash_freq"
        android:textColor="#FFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/seekbar_police_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="2000"
            android:progress="400" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slow"
            android:textColor="#FFF"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_shortcut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:onClick="onClick_AddShortcut"
        android:text="@string/add_shortcut"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/btn_remove_shortcut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="onClick_RemoveShortcut"
        android:text="@string/remove_shortcut"
        android:textColor="#FFF" />

</LinearLayout>